# numProg1

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.kilo/plans/: 1779291895348-proud-garden.md  1779292539632-misty-cabin.md
examples/: demo_integration.py  demo_new_api.py  demo_nonlinear_root_finding.py
numerics/nonLinearSolvers/: base.py  bisection.py  regula_falsi.py  secant.py
numerics/utils/: plotting.py
numprog1/: __init__.py
numprog1/core/: __init__.py  eigen_solver.py  integrator.py  interpolator.py  solver.py
numprog1/methods/: __init__.py
numprog1/methods/integration/: __init__.py  gauss_quadrature.py  newton_cotes.py
numprog1/methods/nonlinear/: __init__.py  bisection.py  regula_falsi.py  secant.py
numprog1/ui/: __init__.py  streamlit_app.py
numprog1/ui/components/: plots.py  results.py  sidebar.py
numprog1/ui/pages/: home.py
numprog1/utils/: plotting.py
numprog1_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_integration.py  test_nonlinear_solvers.py
